// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pds author feed views fetches full author feeds for self (sorted, minimal myState). 1`] = `
Array [
  Object {
    "author": Object {
      "did": "user(0)",
      "displayName": "ali",
      "handle": "alice.test",
    },
    "cid": "cids(0)",
    "downvoteCount": 0,
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "myState": Object {},
    "record": Object {
      "$type": "app.bsky.feed.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "reply": Object {
        "parent": Object {
          "cid": "cids(2)",
          "uri": "record(2)",
        },
        "root": Object {
          "cid": "cids(1)",
          "uri": "record(1)",
        },
      },
      "text": "thanks bob",
    },
    "replyCount": 0,
    "repostCount": 0,
    "upvoteCount": 0,
    "uri": "record(0)",
  },
  Object {
    "author": Object {
      "did": "user(0)",
      "displayName": "ali",
      "handle": "alice.test",
    },
    "cid": "cids(3)",
    "downvoteCount": 1,
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "myState": Object {},
    "record": Object {
      "$type": "app.bsky.feed.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "text": "yoohoo",
    },
    "replyCount": 0,
    "repostCount": 0,
    "upvoteCount": 1,
    "uri": "record(3)",
  },
  Object {
    "author": Object {
      "did": "user(0)",
      "displayName": "ali",
      "handle": "alice.test",
    },
    "cid": "cids(1)",
    "downvoteCount": 1,
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "myState": Object {},
    "record": Object {
      "$type": "app.bsky.feed.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "text": "again",
    },
    "replyCount": 2,
    "repostCount": 1,
    "upvoteCount": 2,
    "uri": "record(1)",
  },
  Object {
    "author": Object {
      "did": "user(0)",
      "displayName": "ali",
      "handle": "alice.test",
    },
    "cid": "cids(4)",
    "downvoteCount": 0,
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "myState": Object {},
    "record": Object {
      "$type": "app.bsky.feed.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "text": "hey there",
    },
    "replyCount": 0,
    "repostCount": 0,
    "upvoteCount": 0,
    "uri": "record(4)",
  },
]
`;

exports[`pds author feed views fetches full author feeds for self (sorted, minimal myState). 2`] = `
Array [
  Object {
    "author": Object {
      "did": "user(0)",
      "displayName": "bobby",
      "handle": "bob.test",
    },
    "cid": "cids(0)",
    "downvoteCount": 0,
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "myState": Object {},
    "record": Object {
      "$type": "app.bsky.feed.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "reply": Object {
        "parent": Object {
          "cid": "cids(1)",
          "uri": "record(1)",
        },
        "root": Object {
          "cid": "cids(1)",
          "uri": "record(1)",
        },
      },
      "text": "hear that",
    },
    "replyCount": 1,
    "repostCount": 0,
    "upvoteCount": 0,
    "uri": "record(0)",
  },
  Object {
    "author": Object {
      "did": "user(0)",
      "displayName": "bobby",
      "handle": "bob.test",
    },
    "cid": "cids(2)",
    "downvoteCount": 0,
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "myState": Object {},
    "record": Object {
      "$type": "app.bsky.feed.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "text": "bobby boy here",
    },
    "replyCount": 0,
    "repostCount": 0,
    "upvoteCount": 0,
    "uri": "record(2)",
  },
  Object {
    "author": Object {
      "did": "user(0)",
      "displayName": "bobby",
      "handle": "bob.test",
    },
    "cid": "cids(3)",
    "downvoteCount": 0,
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "myState": Object {},
    "record": Object {
      "$type": "app.bsky.feed.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "text": "bob back at it again!",
    },
    "replyCount": 0,
    "repostCount": 0,
    "upvoteCount": 0,
    "uri": "record(3)",
  },
]
`;

exports[`pds author feed views fetches full author feeds for self (sorted, minimal myState). 3`] = `
Array [
  Object {
    "author": Object {
      "did": "user(0)",
      "handle": "dan.test",
    },
    "cid": "cids(0)",
    "downvoteCount": 0,
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "myState": Object {
      "repost": "record(1)",
    },
    "record": Object {
      "$type": "app.bsky.feed.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "entities": Array [
        Object {
          "index": Object {
            "end": 18,
            "start": 0,
          },
          "type": "mention",
          "value": "user(2)",
        },
      ],
      "text": "@alice.bluesky.xyz is the best",
    },
    "replyCount": 0,
    "repostCount": 1,
    "repostedBy": Object {
      "did": "user(1)",
      "handle": "carol.test",
    },
    "upvoteCount": 0,
    "uri": "record(0)",
  },
  Object {
    "author": Object {
      "did": "user(1)",
      "handle": "carol.test",
    },
    "cid": "cids(1)",
    "downvoteCount": 0,
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "myState": Object {},
    "record": Object {
      "$type": "app.bsky.feed.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "reply": Object {
        "parent": Object {
          "cid": "cids(2)",
          "uri": "record(3)",
        },
        "root": Object {
          "cid": "cids(2)",
          "uri": "record(3)",
        },
      },
      "text": "of course",
    },
    "replyCount": 0,
    "repostCount": 0,
    "upvoteCount": 0,
    "uri": "record(2)",
  },
  Object {
    "author": Object {
      "did": "user(1)",
      "handle": "carol.test",
    },
    "cid": "cids(3)",
    "downvoteCount": 0,
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "myState": Object {},
    "record": Object {
      "$type": "app.bsky.feed.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "text": "hi im carol",
    },
    "replyCount": 0,
    "repostCount": 0,
    "upvoteCount": 0,
    "uri": "record(4)",
  },
]
`;

exports[`pds author feed views fetches full author feeds for self (sorted, minimal myState). 4`] = `
Array [
  Object {
    "author": Object {
      "did": "user(0)",
      "displayName": "ali",
      "handle": "alice.test",
    },
    "cid": "cids(0)",
    "downvoteCount": 1,
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "myState": Object {
      "repost": "record(1)",
      "upvote": "record(2)",
    },
    "record": Object {
      "$type": "app.bsky.feed.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "text": "again",
    },
    "replyCount": 2,
    "repostCount": 1,
    "repostedBy": Object {
      "did": "user(1)",
      "handle": "dan.test",
    },
    "upvoteCount": 2,
    "uri": "record(0)",
  },
  Object {
    "author": Object {
      "did": "user(1)",
      "handle": "dan.test",
    },
    "cid": "cids(1)",
    "downvoteCount": 0,
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "myState": Object {},
    "record": Object {
      "$type": "app.bsky.feed.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "entities": Array [
        Object {
          "index": Object {
            "end": 18,
            "start": 0,
          },
          "type": "mention",
          "value": "user(0)",
        },
      ],
      "text": "@alice.bluesky.xyz is the best",
    },
    "replyCount": 0,
    "repostCount": 1,
    "upvoteCount": 0,
    "uri": "record(3)",
  },
  Object {
    "author": Object {
      "did": "user(1)",
      "handle": "dan.test",
    },
    "cid": "cids(2)",
    "downvoteCount": 0,
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "myState": Object {},
    "record": Object {
      "$type": "app.bsky.feed.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "text": "dan here!",
    },
    "replyCount": 0,
    "repostCount": 0,
    "upvoteCount": 0,
    "uri": "record(4)",
  },
]
`;

exports[`pds author feed views reflects fetching user's state in the feed. 1`] = `
Array [
  Object {
    "author": Object {
      "did": "user(0)",
      "displayName": "ali",
      "handle": "alice.test",
    },
    "cid": "cids(0)",
    "downvoteCount": 0,
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "myState": Object {},
    "record": Object {
      "$type": "app.bsky.feed.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "reply": Object {
        "parent": Object {
          "cid": "cids(2)",
          "uri": "record(2)",
        },
        "root": Object {
          "cid": "cids(1)",
          "uri": "record(1)",
        },
      },
      "text": "thanks bob",
    },
    "replyCount": 0,
    "repostCount": 0,
    "upvoteCount": 0,
    "uri": "record(0)",
  },
  Object {
    "author": Object {
      "did": "user(0)",
      "displayName": "ali",
      "handle": "alice.test",
    },
    "cid": "cids(3)",
    "downvoteCount": 1,
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "myState": Object {
      "upvote": "record(4)",
    },
    "record": Object {
      "$type": "app.bsky.feed.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "text": "yoohoo",
    },
    "replyCount": 0,
    "repostCount": 0,
    "upvoteCount": 1,
    "uri": "record(3)",
  },
  Object {
    "author": Object {
      "did": "user(0)",
      "displayName": "ali",
      "handle": "alice.test",
    },
    "cid": "cids(1)",
    "downvoteCount": 1,
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "myState": Object {
      "downvote": "record(5)",
    },
    "record": Object {
      "$type": "app.bsky.feed.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "text": "again",
    },
    "replyCount": 2,
    "repostCount": 1,
    "upvoteCount": 2,
    "uri": "record(1)",
  },
  Object {
    "author": Object {
      "did": "user(0)",
      "displayName": "ali",
      "handle": "alice.test",
    },
    "cid": "cids(4)",
    "downvoteCount": 0,
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "myState": Object {},
    "record": Object {
      "$type": "app.bsky.feed.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "text": "hey there",
    },
    "replyCount": 0,
    "repostCount": 0,
    "upvoteCount": 0,
    "uri": "record(6)",
  },
]
`;
